# semester-project

./: .gitignore  README.md  pyproject.toml
data/: Crime-Texts.txt  KMEANS-CLUSTERING_RESULTS.txt  KMEANS-LOGISTIC-REGRESSION.txt  KMEANS-RANDOMFOREST.txt  LOGISTIC-REGRESSION-PREDICTION_RESULTS.txt  Metrics-K10-Variance75-tSNE.docx  Metrics-K10-Variance95-tSNE.docx  Metrics-K10-Variance95.docx  Metrics-K8-Variance75-tSNE.docx  Metrics-K8-Variance95-tSNE.docx  Metrics-K8-Variance95.docx  RANDOMFOREST-PREDICTION_RESULTS.txt  ReadMe.txt  clustered_labels-1.csv  svm_model.pkl  text-train-data-set.txt  tfidf_vectorizer.pkl
exercises/: Car Encoding Exercise.ipynb  ReadMe.txt
src/iitb_semester_project/: Image-Text-Training-Labelling-Classification.ipynb  Image-Text-Training-Labelling-Classification.py  Project.ipynb  Unsupervised_Data_Labeling.ipynb
