[project]
name = "iitb-semester-project"
version = "0.1.0"
description = "Semester project"
authors = [
    {name = "Project group", email = "project.group@gmail.com"},
]
dependencies = ["numpy>=2.2.5", "pandas>=2.2.3", "seaborn>=0.13.2", "scikit-learn>=1.6.1", "jupyter>=1.1.1", "matplotlib>=3.10.1"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
